--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "host": "vite preview --host"
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +20,7 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
