--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
