chore/switch formik for rhf and improve navigation

--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,5 +1,5 @@
 {
-  "apiUrl": "https://rkltje7ek6.execute-api.eu-west-1.amazonaws.com/",
   "env": "prod",
-  "env_comment": "The different routes haven't been set up yet, so this is just a placeholder"
+  "env_comment": "The different routes haven't been set up yet, so this is just a placeholder",
+  "apiUrl": "https://reclulq1pl.execute-api.eu-west-1.amazonaws.com/"
 }
