--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,16 @@
     "host": "vite preview --host"
   },
   "dependencies": {
-    "axios": "^1.3.4",
-    "formik": "^2.2.9",
+    "@hookform/resolvers": "^3.1.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.192",
