--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "host": "vite preview --host"
+    "host": "vite preview --host",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
