--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "constructs": "^10.1.312",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "nanoid": "^4.0.2",
     "source-map-support": "^0.5.21",
     "zod": "^3.21.4"
   }
