--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "host": "vite preview --host",
     "type-check": "tsc",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -24,6 +26,13 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.7",
+    "@storybook/addon-interactions": "^7.0.7",
+    "@storybook/addon-links": "^7.0.7",
+    "@storybook/blocks": "^7.0.7",
+    "@storybook/react": "^7.0.7",
+    "@storybook/react-vite": "^7.0.7",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
@@ -38,6 +47,8 @@
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^21.1.1",
     "postcss": "^8.4.21",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.7",
     "tailwindcss": "^3.2.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.3",
