Add Login and TransactionRow stories, bump packages, refactor TransactionRow

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc",
     "test": "jest --coverage",
     "storybook": "storybook dev -p 6006",
+    "test-storybook": "test-storybook",
     "build-storybook": "storybook build"
   },
   "dependencies": {
@@ -26,12 +27,15 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.7",
-    "@storybook/addon-interactions": "^7.0.7",
-    "@storybook/addon-links": "^7.0.7",
-    "@storybook/blocks": "^7.0.7",
-    "@storybook/react": "^7.0.7",
-    "@storybook/react-vite": "^7.0.7",
+    "@storybook/addon-a11y": "^7.0.9",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-interactions": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
+    "@storybook/blocks": "^7.0.9",
+    "@storybook/react": "^7.0.9",
+    "@storybook/react-vite": "^7.0.9",
+    "@storybook/jest": "0.1.0",
+    "@storybook/test-runner": "0.10.0",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -42,13 +46,14 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
+    "axe-playwright": "^1.2.3",
     "daisyui": "^2.51.5",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jsdom": "^21.1.1",
+    "jsdom": "^22.0.0",
     "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
-    "storybook": "^7.0.7",
+    "storybook": "^7.0.9",
     "tailwindcss": "^3.2.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.3",
